--- a/Dia_3/8 - Fecha y Hora/index.html
+++ b/Dia_3/8 - Fecha y Hora/index.html
@@ -3,14 +3,14 @@
         <Title>Fecha y Hora</Title>
         <link rel="stylesheet" href="misEstilos.css">
     </head>
-    <body>
+    <body onload="comenzarReloj()">
 
         <p>Ingresa num de segundos </p>
         <input type="number" id="tiempo">
         <button onclick="comenzarTiempo()">Alarma</button>
-        <h1 id="texto" style="color: red;">APAGADO</h1>
+        <h1 id="texto">00:00:00</h1>
 
-        <audio controls>
+        <audio id="audioAlarma">
             <source src="Audios/alarma.mp3" type="audio/mpeg">
             Sonido no habilitado
         </audio>
@@ -24,9 +24,21 @@
                 setTimeout(tiempoCumplido,1000 * segundos.value);
             }
             function tiempoCumplido(){
-                texto.textContent = "ENCENDIDO";
                 texto.style.color = "green";
                 sonidoAlarma.play();
+            }
+
+            function comenzarReloj() {
+                setInterval(ticTac, 1000);
+            }
+            function ticTac(){
+                let tiempoActual = new Date();
+                let hora = String(tiempoActual.getHours()).padStart(2,"0");
+                let minutos = String(tiempoActual.getMinutes()).padStart(2,"0");
+                let segundos = String(tiempoActual.getSeconds()).padStart(2,"0");
+
+                let textoHora = hora + ":" + minutos + ":" + segundos;
+                texto.textContent = textoHora;
             }
         </script>
 
