--- a/Día_7/Versión 5/index.html
+++ b/Día_7/Versión 5/index.html
@@ -3,12 +3,21 @@
 
     <head>
         <title>Venta de Donuts</title>
-        <link rel="stylesheet" href="misEstilos.css">
         <script src="misScripts.js"></script>
+        <link rel="stylesheet" href="misEstilos.css">
     </head>
     
-    <body>
+    <body onload="crearTiendas('itemsTiendas', 0, 8)">
+        <p>&#127849 Ventas de MaDona &#127849</p>
+
+        <div id="itemsTiendas">
+        </div>
  
-    </body>
+        <p id="parrafoSalida"></p> 
+
+        <p>
+             <button onclick="calcular()">Calcular</button>
+        </p>
+     </body>
 
 </html>
