--- a/Día_8/4 - Constructor/index.html
+++ b/Día_8/4 - Constructor/index.html
@@ -4,6 +4,16 @@
   </head>
 
   <body>
+    <script>
+      function Perro() {
+        this.patas = 4;
+        this.ladrar = function () {
+          console.log("Guau")
+        };
+      }
 
+      let simba = new Perro();
+      let batu = new Perro();
+    </script>
   </body>
 </html>
