--- a/Día_8/5 - Parametros de Constructor/index.html
+++ b/Día_8/5 - Parametros de Constructor/index.html
@@ -4,6 +4,28 @@
   </head>
 
   <body>
+    <script>
+       function Perro(raza, edad) {
+        this.patas = 4;
+        this.raza = raza;
+        this.edad = edad;
+        this.ladrar = function () {
+          console.log("Guau")
+        };
+      }
+      let simba = new Perro("Shih Tzu", 4);
+      let reina = new Perro("Caniche", 15);
 
+      function Empleado(nombre, apellido, edad, cargo){
+        this.nombre = nombre;
+        this.apellido = apellido;
+        this.edad = edad;
+        this.cargo = cargo;
+
+        this.presentarse = function(){
+          console.log(`Mi nombre es ${this.nombre} ${this.apellido}, soy ${this.cargo}, y tengo ${this.edad} años`)
+        }
+      }
+    </script>
   </body>
 </html>
