--- a/Día_9/4 - Registro Automotor/index.html
+++ b/Día_9/4 - Registro Automotor/index.html
@@ -5,6 +5,8 @@
         <script src="misScripts.js"></script>
     </head>
     <body> 
-
+        <h1>Automoviles</h1>
+        <button onclick="mostrarAutomoviles()">Mostrar Coches</button>
+        <ul id="listaAutomoviles"></ul>
     </body>
 </html>
