--- a/Día_9/3 - Modificar Prototipos/index.html
+++ b/Día_9/3 - Modificar Prototipos/index.html
@@ -5,6 +5,17 @@
 
   <body>
     <script>
+      function Libro(autor, titulo, cantPaginas){
+        this.autor = autor;
+        this.titulo = titulo;
+        this.cantPaginas = cantPaginas;
+      }
+
+      let libro1 = new Libro("Stephen", "Carrie", 200)
+
+      Libro.prototype.abrirLibro = function(){
+        alert(this.titulo + " ha sido abierto.")
+      }
 
     </script>
   </body>
