--- a/Día_10/Proyecto/index.html
+++ b/Día_10/Proyecto/index.html
@@ -5,6 +5,10 @@
         <script src="misscripts.js"></script>
     </head>
     <body>
- 
+        <h1>Veterinaria Animalito's</h1>
+        <div class="textoCentrado">
+            <button onclick="mostrarAnimales()">Mostrar Animales</button>
+        </div>
+        <ul id="listaAnimales"></ul>
     </body>
 </html>
