--- a/Día_11/2 - Fetch/index.html
+++ b/Día_11/2 - Fetch/index.html
@@ -5,7 +5,16 @@
   <body>
     <div id="nombre"></div>
     <script>
+      let datosJson;
 
+      fetch("persona.json")
+      .then(res => res.json())
+      .then((salida) => {
+        datosJson = salida;
+
+        let elementoTexto = document.getElementById("nombre");
+        elementoTexto.textContent = datosJson.nombre;
+      })
     </script>
   </body>
 </html>
